GUI-6002 Fix profile text overflow issue

--- a/assets/stylesheets/less/partials/basic.less
+++ b/assets/stylesheets/less/partials/basic.less
@@ -1606,7 +1606,6 @@ input[type=number]::-webkit-outer-spin-button {
 
 .tooltip.bartip {
     .tooltip-inner {
-        white-space: nowrap;
         max-width: 300px;
     }
 }
